# rg2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: scene.blend  scene.blend1  scene.fbx  scene.glb  scene.gltf  terrain.blend
include/: Camera.hpp  EBO.hpp  Entity.hpp  Mesh.hpp  ObjLoader.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
include/glad/: gl.h
shaders/: default.frag  default.vert  depth.frag  shadow_map.frag  shadow_map.vert  ui_default.frag  ui_default.vert
src/: Camera.cpp  EBO.cpp  Entity.cpp  Mesh.cpp  ObjLoader.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp
